--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = news_spider.settings
+default = mu_spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = news_spider
+project = mu_spider
