--- a/mu_scrape/scrapy.cfg
+++ b/mu_scrape/scrapy.cfg
@@ -4,8 +4,10 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
+#default = src.mu_spider.settings
 default = mu_spider.settings
 
 [deploy]
 #url = http://localhost:6800/
 project = mu_spider
+
